--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-nem html
+<!DOCTYPE html>
+<html>
+<head>
+<title>Új-média1</title>
+</head>
+<body>
+
+<h1 style="background-color:DodgerBlue;">Új-média1</h1>
+
+<p style="background-image: https://tenor.com/hu/view/emoji-twerk-shaking-emoji-cheeks-emoji-shaking-ass-emoji-ass-gif-13787302569731851210;">
+  
+</body>
+</html>
