--- a/ujmedia.html
+++ b/ujmedia.html
@@ -5,14 +5,14 @@
 </head>
 <body>
 
-<h1 style="background-color:red;">Új-média1</h1>
+<h1 style="background-color:red;"></h1>
 
 <style>
   .gif-background {
     background-image: url('emoji-twerk-shaking.gif');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 400px;
+    height: 1000px;
   }
   
     body {
@@ -35,4 +35,5 @@
 </div>
   
 </body>
+
 </html>
