--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 Your browser does not support the audio element.
 </audio>
 
-<a href="kakukk.html"><img src="emoji-twerk-shaking.gif" id="zeljkobebek"></a>
+<a href="proba.html"><img src="emoji-twerk-shaking.gif" id="zeljkobebek"></a>
 
 
 <div class="gif-background">
@@ -47,4 +47,5 @@ Your browser does not support the audio element.
 </div>
   
 </body>
+
 </html>
