--- a/nemuj1.html
+++ b/nemuj1.html
@@ -6,7 +6,29 @@
 ide jon a szoveg
 
 <div id="szoveg"></div>
+
+<img id="kep" src="figyi.jpg" alt="" width="800" height="700">
+
+
 </body>
+
+<style>
+
+
+#kep {
+      position: absolute;
+	  top: 15%;
+	  left: 40%;
+	  rotate: 0deg;
+	  animation-name: kepmozgo;
+	  animation-duration: 60s;
+	  animation-iteration-count: infinite;
+	  
+}
+
+</style>
+
+
 
 <script>
 
