--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a {
 <p class="arnyek-korvonal"  id="fontos-resz"><big><big><big><big><big>Tóth Mélykúti Patrik</big></big></big></p>
 <br>
 <a href="uj2.html"><big><big><big>Ez a videóm ദ്ദി(˵ •̀ ᴗ - ˵ ) ✧  </a><br>
-<a href="uj2.html"><img src="zeljkobebek.jpg" id="zeljkobebek"></a>
+<a href="nemuj1.html"><img src="zeljkobebek.jpg" id="zeljkobebek"></a>
 <br>
 
 <iframe id="kep" width="560" height="315" src="https://www.youtube.com/embed/wfOXpVB4ocs?si=RFdvi9mQRmtH61lb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -95,3 +95,4 @@ a {
 <div id="mcisti1">zeljko bebek</div>
 </body>
 </html>
+
